--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.codewithtwins</groupId>
     <artifactId>bank-account</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
+    <modules>
+        <module>../cqrs-es/cqrs_core</module>
+        <module>account_common</module>
+        <module>account_cmd</module>
+        <module>account_query</module>
+    </modules>
+
 </project>
