--- a/account_cmd/pom.xml
+++ b/account_cmd/pom.xml
@@ -35,6 +35,20 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.codewithtwins</groupId>
+            <artifactId>cqrs_core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codewithtwins</groupId>
+            <artifactId>account_common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
