--- a/account_common/pom.xml
+++ b/account_common/pom.xml
@@ -8,7 +8,7 @@
         <version>2.7.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.codewithtwins</groupId>
     <artifactId>account_common</artifactId>
     <version>1.0.0</version>
     <name>account_common</name>
@@ -27,6 +27,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.codewithtwins</groupId>
+            <artifactId>cqrs_core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
